fix: fixed input on mobile version

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@
 
 @layer components {
   .input-default {
-    @apply p-1  text-text-primary border-b-2 border-orange  outline-none;
+    @apply p-1  text-text-primary border-b-2 border-orange  outline-none w-full;
   }
 
   .input-default:focus {
